--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "matplotlib",
     "numpy",
     "iso8601",
+    "requests-ratelimiter",
 ]
 
 [project.optional-dependencies]
