pyproject.toml: Explicitely specify supported python version
This patch enables the automated installation of a compatible python
version by 'uv sync'.

Drop support for older python versions following "SPEC 0".

SPEC 0 — Minimum Supported Dependencies:
https://scientific-python.org/specs/spec-0000/

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "iso8601",
     "requests-ratelimiter",
 ]
+requires-python = ">=3.11"
 
 [project.optional-dependencies]
 dev = [
