--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,5 +45,11 @@ Repository = "https://github.com/wiredlab/scheduling-bazaar"
 [tool.hatch.build.targets.wheel]
 packages = ["satbazaar2"]
 
+[tool.uv]
+dev-dependencies = [
+    "ipympl>=0.9.4",
+    "jupyter>=1.1.1",
+]
+
 [project.scripts]
 get-observations = "satbazaar2.get_observations:main"
