--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,9 +28,14 @@ dependencies = [
     "matplotlib",
     "numpy",
     "iso8601",
-    "requests-ratelimiter",
     "pyarrow>=18.0.0",
     "fastparquet>=2024.5.0",
+    "pyrate-limiter>=3.7.0",
+    "duckdb>=1.1.3",
+    "hvplot>=0.11.1",
+    "jupysql>=0.10.14",
+    "toml>=0.10.2",
+    "jupyterlab-execute-time>=3.2.0",
 ]
 requires-python = ">=3.11"
 
